--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3758,22 +3758,40 @@
   background-image: url("../../img/cubes.png");
   background-position: top;
   background-size: contain; }
+  @media (max-width: 768px) {
+    .about {
+      padding: 20px 0; } }
   .about-row {
     margin: 40px 0; }
+    @media (max-width: 768px) {
+      .about-row {
+        margin: 0; } }
   .about__header-wrapper {
-    width: 500px;
     margin-bottom: 110px;
     text-transform: uppercase; }
   .about__header {
     margin: 0;
     font-size: 48px;
     font-family: SFUIHeavy; }
+    @media (max-width: 768px) {
+      .about__header {
+        font-size: 30px;
+        text-align: center; } }
   .about__underheader {
     font-size: 30px; }
+    @media (max-width: 768px) {
+      .about__underheader {
+        font-size: 24px;
+        text-align: center; } }
   .about__text {
     padding-top: 15px;
     font-size: 14px;
     line-height: 24px; }
+    @media (max-width: 768px) {
+      .about__text {
+        width: 100%;
+        margin-bottom: 30px;
+        text-align: center; } }
   .about__dignity-wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -3783,12 +3801,15 @@
     margin-bottom: 40px; }
 
 .dignity__image {
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
   width: 100%;
   height: 220px;
   background-position: center;
   background-size: contain; }
+  @media (max-width: 768px) {
+    .dignity__image {
+      display: block;
+      height: 160px;
+      margin: 0 auto; } }
 
 @media (max-width: 768px) {
   .dignity__text-wrapper {
@@ -3799,6 +3820,9 @@
   font-size: 20px;
   font-family: SFUIBold;
   text-transform: uppercase; }
+  @media (max-width: 768px) {
+    .dignity__header {
+      margin-bottom: 10px; } }
 
 .dignity__text {
   font-size: 14px;
