--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4651,6 +4651,12 @@ form * {
   height: auto;
   padding: 25.5px 15px; }
 
+.game-item {
+  width: 100%;
+  height: 160px;
+  background-color: #303030;
+  margin-bottom: 30px; }
+
 .navbar-fixed-top .navbar-collapse, .navbar-fixed-bottom .navbar-collapse {
   max-height: calc(100vh - 150px); }
 
@@ -4782,3 +4788,13 @@ form * {
 
 .bonus-row {
   margin-bottom: 60px; }
+
+@media (max-width: 600px) {
+  .games [class^="col-"],
+  .last-winners [class^="col-"] {
+    width: 50%; } }
+
+@media (max-width: 400px) {
+  .games [class^="col-"],
+  .last-winners [class^="col-"] {
+    width: 100%; } }
