little fix in jackpot on index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -862,6 +862,10 @@
 .jackpot {
   margin-top: 60px;
   height: 500px; }
+  @media (max-width: 768px) {
+    .jackpot {
+      height: auto;
+      padding-bottom: 30px; } }
   .jackpot-wrap,
   .jackpot .container,
   .jackpot .row,
