--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1133,6 +1133,7 @@
     content: '';
     position: absolute;
     top: 0;
+    left: 0;
     width: 100%;
     height: 1px;
     background-color: #313131; }
@@ -1140,6 +1141,7 @@
     content: '';
     position: absolute;
     bottom: 0;
+    left: 0;
     width: 100%;
     height: 1px;
     background-color: #313131; }
@@ -4611,7 +4613,7 @@
 body {
   color: #fff;
   font-family: SFUIRegular;
-  overflow-x: hidden; }
+  overflow: hidden; }
 
 * {
   margin: 0;
