--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4675,6 +4675,15 @@ form * {
   height: auto;
   padding: 25.5px 15px; }
 
+.ds-logo:nth-child(2) {
+  display: none; }
+
+@media (max-width: 400px) {
+  .ds-logo:first-child {
+    display: none; }
+  .ds-logo:nth-child(2) {
+    display: block; } }
+
 .game-item {
   width: 100%;
   height: 160px;
